trigger new pipeline

--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -97,6 +97,7 @@ on:
       buildkitd-flags:
         required: false
         default: --oci-worker-no-process-sandbox
+        type: string
       dockerfile-frontend:
         required: false
         default: dockerfile.v0
