--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -162,6 +162,15 @@ runs:
         ln "${CONFIG_FILE}" ~/.docker/config.json
         cat ~/.docker/config.json | jq -C
       fi
+    shell: bash
+    env:
+      RED: \033[1;31m
+      GREEN: \033[1;32m
+      YELLOW: \033[1;33m
+      BLUE: \033[1;34m
+      PURPLE: \033[1;35m
+      CYAN: \033[1;36m
+      BLANK: \033[0m
 
   - id: buildkit-build
     run: |
