--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -193,27 +193,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  prepare:
-    name: Prepare
-    timeout-minutes: 10
-    runs-on: ubuntu-20.04
-    container:
-      image: ixxel/ci-toolbox:latest
-    steps:
-    - name: Clone code
-      uses: actions/checkout@v3
-    - name: Checkov scan
-      uses: ixxeL-actions/workflows/.github/actions/checkov@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-        artefact: ${{ inputs.artefact }}
-        compact: ${{ inputs.compact }}
-        quiet: ${{ inputs.quiet }}
-        no-guide: ${{ inputs.no-guide }}
-        format: ${{ inputs.format }}
-        threshold: ${{ inputs.threshold }}
-        soft-fail: ${{ inputs.soft-fail }}
-        gate: ${{ inputs.gate }}
+  # prepare:
+  #   name: Prepare
+  #   timeout-minutes: 10
+  #   runs-on: ubuntu-20.04
+  #   container:
+  #     image: ixxel/ci-toolbox:latest
+  #   steps:
+  #   - name: Clone code
+  #     uses: actions/checkout@v3
+  #   - name: Checkov scan
+  #     uses: ixxeL-actions/workflows/.github/actions/checkov@main
+  #     with:
+  #       workingdir: ${{ inputs.workingdir }}
+  #       artefact: ${{ inputs.artefact }}
+  #       compact: ${{ inputs.compact }}
+  #       quiet: ${{ inputs.quiet }}
+  #       no-guide: ${{ inputs.no-guide }}
+  #       format: ${{ inputs.format }}
+  #       threshold: ${{ inputs.threshold }}
+  #       soft-fail: ${{ inputs.soft-fail }}
+  #       gate: ${{ inputs.gate }}
   build:
     name: Build
     timeout-minutes: 15
