--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -183,7 +183,6 @@ runs:
       fi
 
       CACHE_REGISTRY=$(echo ${{ inputs.cache-registry }} | sed 's/\/$//')
-      CACHES_REPO=""
       if [[ ${{ inputs.caching }} = true ]]
       then
         echo -e "${YELLOW}[ EXECUTING ] > Executing build of ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW}${BLANK}"
@@ -194,33 +193,31 @@ runs:
                                 --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache \
                                 --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache,mode=max,push=true \
                                 --frontend=${{ inputs.dockerfile-frontend }} \
-                                --local context=${{ inputs.workingdir }}\
-                                --local dockerfile=${{ inputs.workingdir }}\
+                                --local context=${{ inputs.workingdir }} \
+                                --local dockerfile=${{ inputs.workingdir }} \
                                 --output type=image,name=${{ inputs.cache-registry }}/${{ inputs.img-name }}:${{ inputs.tag}},push=${{ inputs.push }} \
                                 ${BUILD_ARGS}
-          assert_result "Final ${{ inputs.img-name }}:${{ inputs.tag}} build"
-
+          assert_result "${{ inputs.img-name }}:${{ inputs.tag}} build"
         else
-          echo -e "${CYAN}[ INFO ] > Tarball mode on${BLANK}"
-          buildctl-daemonless.sh build ${TARGET_DIR} \
-                                  ${CACHES_REPO} \
-                                  --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:latest \
-                                  --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:${{ inputs.tag}} \
-                                  --export-cache type=inline \
-                                  --frontend=${{ inputs.dockerfile-frontend }} \
-                                  --local context=${{ inputs.workingdir }}\
-                                  --local dockerfile=${{ inputs.workingdir }}\
-                                  --output type=image,name=${{ inputs.img-name }}:${{ inputs.tag}},dest=${TARGET_DIR}/${{ inputs.img-name }}.tar
+          echo -e "${CYAN}[ INFO ] > Tarball mode on. Compressing image ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW} to tarball ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar${BLANK}"
+          buildctl-daemonless.sh build \
+                                --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache \
+                                --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache,mode=max,push=true \
+                                --frontend=${{ inputs.dockerfile-frontend }} \
+                                --local context=${{ inputs.workingdir }} \
+                                --local dockerfile=${{ inputs.workingdir }} \
+                                --output type=image,name=${{ inputs.img-name }}:${{ inputs.tag}},dest=${{ inputs.target-dir }}/${{ inputs.img-name }}.tar
+          assert_result "${{ inputs.img-name }}:${{ inputs.tag}} build"
         fi
       else
-        echo -e "${CYAN}[ INFO ] > No multi stage option activated abd no cache option activated${BLANK}"
+        echo -e "${CYAN}[ INFO ] > No caching option activated${BLANK}"
         echo -e "${YELLOW}[ EXECUTING ] > Executing build of ${{ inputs.img-name }}:${{ inputs.tag}} with buildkit${BLANK}"
         buildctl-daemonless.sh build \
                               --frontend=${{ inputs.dockerfile-frontend }} \
                               --local context=${{ inputs.workingdir }} \
                               --local dockerfile=${{ inputs.workingdir }} \
                               --export-cache type=inline \
-                              --output type=${COMPRESSION_FORMAT},name=${{ inputs.img-name }}:${{ inputs.tag}},mode=min,dest=${TARGET_DIR}/${{ inputs.img-name }}.tar \
+                              --output type=${COMPRESSION_FORMAT},name=${{ inputs.img-name }}:${{ inputs.tag}},mode=min,dest=${{ inputs.target-dir }}/${{ inputs.img-name }}.tar \
                               ${BUILD_ARGS}
       fi
       if [[ $? = 0 ]]
@@ -231,9 +228,6 @@ runs:
         echo -e "${RED}[ FAIL ] > Docker image ${{ inputs.img-name }}:${{ inputs.tag}} failed to build with Buildkit !${BLANK}"
         exit 1
       fi
-      echo "IMG_TAR_PATH=${{ inputs.target-dir }}/${{ inputs.img-name }}.tar" >> buildkit-build.env
-      echo "IMG_REF=${{ inputs.img-name }}:${{ inputs.tag}}" >> buildkit-build.env
-      ls -la ${{ inputs.target-dir }}/
     shell: bash
     env:
       RED: \033[1;31m
