--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -79,9 +79,9 @@ runs:
           fi
         fi
       else
-        SHORT_SHA=${GITHUB_SHA:0:7}
+        GITHUB_SHORT_SHA=${GITHUB_SHA:0:7}
         proj_version="$GITHUB_SHA"
-        proj_short_version="$GITHUB_SHA"
+        proj_short_version="$GITHUB_SHORT_SHA"
       fi
       echo -e "${CYAN}[ INFO ] Using ${PURPLE}$proj_version${CYAN} for project version${BLANK}"
       echo -e "${CYAN}[ INFO ] Using ${PURPLE}$proj_short_version${CYAN} for short project version${BLANK}"
