--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -202,7 +202,7 @@ runs:
           echo -e "${CYAN}[ INFO ] > Tarball mode on. Compressing image ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW} to tarball ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar${BLANK}"
           buildctl-daemonless.sh build \
                                 --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache \
-                                --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache,mode=max,push=true \
+                                --export-cache type=inline \
                                 --frontend=${{ inputs.dockerfile-frontend }} \
                                 --local context=${{ inputs.workingdir }} \
                                 --local dockerfile=${{ inputs.workingdir }} \
