--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -161,7 +161,8 @@ runs:
           export DOCKER_CONFIG=/root/.docker
           echo -e "${CYAN}[ INFO ] > Using docker cli emulated podman${BLANK}"
           ARGS="--tls-verify=false"
-          export CONFIG_FILE="/run/containers/0/auth.json"
+          # export CONFIG_FILE="/run/containers/0/auth.json"
+          export CONFIG_FILE="/root/.docker/config.json"
         else
           export CONFIG_FILE="~/.docker/config.json"
         fi
@@ -176,10 +177,10 @@ runs:
           echo -e "${CYAN}[ INFO ] > Login to docker.io as user ${{ inputs.docker-io-user }}${BLANK}"
           ${{ inputs.login-binary }} login docker.io -u ${{ inputs.docker-io-user }} -p ${{ inputs.docker-io-pwd }} ${ARGS}
           assert_result "Login"
-          cat /root/.docker/config.json  | jq '(.auths |= (. + {"https://index.docker.io/v1/":."docker.io"}|del(."docker.io")))' | sponge /root/.docker/config.json 
+          cat ${CONFIG_FILE}  | jq '(.auths |= (. + {"https://index.docker.io/v1/":."docker.io"}|del(."docker.io")))' | sponge ${CONFIG_FILE}
         fi
         # ln "${CONFIG_FILE}" ${DOCKER_CONFIG}
-        cat /root/.docker/config.json | jq -C
+        cat "${CONFIG_FILE}" | jq -C
       fi
 
       CACHE_REGISTRY=$(echo ${{ inputs.cache-registry }} | sed 's/\/$//')
