--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -23,6 +23,9 @@ on:
         required: false
         default: false
         type: boolean
+      build-arg:
+        required: false
+        type: string
     # Checkov
       artefact:
         required: true
