--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -191,7 +191,7 @@ jobs:
         fi
         CREATION_DATE=$(TZ='Europe/Paris' date -Iseconds)
         BUILD_ARG=''
-        BUILD_ARG+=CREATION_DATE=$CREATION_DATE|${{ inputs.build-arg }}
+        BUILD_ARG+="CREATION_DATE="$CREATION_DATE"|${{ inputs.build-arg }}"
         echo "BUILD_ARG=$BUILD_ARG" >> $GITHUB_OUTPUT
     - name: Clone code
       id: clone
