--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -190,11 +190,9 @@ jobs:
           echo "AUTO_PUSH=false" >> $GITHUB_OUTPUT
         fi
         CREATION_DATE=$(TZ='Europe/Paris' date -Iseconds)
-        BUILD_ARG=''
-        BUILD_ARG+="CREATION_DATE="$CREATION_DATE"|${{ inputs.build-arg }}"
+        BUILD_ARG=CREATION_DATE="$CREATION_DATE"
+        BUILD_ARG+="|${{ inputs.build-arg }}"
         echo "BUILD_ARG=$BUILD_ARG" >> $GITHUB_OUTPUT
-      with:
-        build-arg: ${{ inputs.build-arg }}
     - name: Clone code
       id: clone
       uses: actions/checkout@v3
