removed unused buildarg

--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -25,6 +25,7 @@ on:
         type: boolean
       build-arg:
         required: false
+        default: "CI=true"
         type: string
       target-dir:
         required: false
