--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -198,7 +198,8 @@ runs:
                                 --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache,mode=max,push=true \
                                 --frontend=${{ inputs.dockerfile-frontend }} \
                                 --local context=${{ inputs.workingdir }} \
-                                --local dockerfile=${{ inputs.workingdir }}/${{ inputs.dockerfile-name }} \
+                                --local dockerfile=${{ inputs.workingdir }} \
+                                --opt filename=${{ inputs.workingdir }}/${{ inputs.dockerfile-name }} \
                                 --output type=image,name=${{ inputs.cache-registry }}/${{ inputs.img-name }}:${{ inputs.tag}},push=${{ inputs.push }} \
                                 --metadata-file metadata.json \
                                 ${BUILD_ARGS}
@@ -210,7 +211,8 @@ runs:
                                 --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache,mode=max,push=true \
                                 --frontend=${{ inputs.dockerfile-frontend }} \
                                 --local context=${{ inputs.workingdir }} \
-                                --local dockerfile=${{ inputs.workingdir }}/${{ inputs.dockerfile-name }} \
+                                --local dockerfile=${{ inputs.workingdir }} \
+                                --opt filename=${{ inputs.workingdir }}/${{ inputs.dockerfile-name }} \
                                 --output type=${COMPRESSION_FORMAT},name=${{ inputs.img-name }}:${{ inputs.tag}},mode=min,dest=${{ inputs.target-dir }}/${{ inputs.img-name }}.tar \
                                 --metadata-file metadata.json \
                                 ${BUILD_ARGS}
@@ -222,7 +224,8 @@ runs:
         buildctl-daemonless.sh build \
                               --frontend=${{ inputs.dockerfile-frontend }} \
                               --local context=${{ inputs.workingdir }} \
-                              --local dockerfile=${{ inputs.workingdir }}/${{ inputs.dockerfile-name }} \
+                              --local dockerfile=${{ inputs.workingdir }} \
+                              --opt filename=${{ inputs.workingdir }}/${{ inputs.dockerfile-name }} \
                               --export-cache type=inline \
                               --output type=${COMPRESSION_FORMAT},name=${{ inputs.img-name }}:${{ inputs.tag}},mode=min,dest=${{ inputs.target-dir }}/${{ inputs.img-name }}.tar \
                               --metadata-file metadata.json \
