--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -191,8 +191,10 @@ jobs:
     - name: Set variables
       id: setvars
       run: |
-        if [[ "${{github.base_ref}}" == "main" || "${{github.ref}}" == "refs/heads/main" ]]; then
+        if [[ "${{github.base_ref}}" == "main" || "${{github.ref}}" == "refs/heads/main" || "${{github.base_ref}}" == "master" || "${{github.ref}}" == "refs/heads/master" ]]; then
           echo "AUTO_PUSH=false" >> $GITHUB_OUTPUT
+        elif [[ "${{github.base_ref}}" =~ "/^release\/.*/" || "${{github.ref}}" =~ "refs/heads/release\/.*" ]]
+          echo "AUTO_PUSH=true" >> $GITHUB_OUTPUT
         fi
     - name: Clone code
       id: clone
