--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -76,6 +76,7 @@ runs:
             exit 1
           else
             proj_version="v${BASH_REMATCH[1]}$(( ${BASH_REMATCH[2]} + 1 ))"
+            proj_short_version=$proj_version
           fi
         fi
       else
