--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -7,6 +7,8 @@ on:
         required: false
       docker-io-pwd:
         required: false
+      git-token:
+        required: true
     inputs:
     # General
       workingdir:
@@ -155,6 +157,18 @@ on:
         required: false
         default: ''
         type: string
+      # git tag
+      git-workdir:
+        required: false
+        type: string
+      tag-msg:
+        required: false
+        default: 'ci'
+        type: string
+      push-option:
+        required: false
+        default: ci.skip
+        type: string
 
   workflow_dispatch:
 
@@ -239,3 +253,13 @@ jobs:
         scope: ${{ inputs.scope }}
         template: ${{ inputs.template }}
         verbose: ${{ inputs.verbose }}
+    - name: git tag
+      id: git-tag
+      if: ${{ github.ref =~ "refs/heads/release\/.*" }} || ${{ github.base_ref =~ "/^release\/.*/" }}
+      uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+      with:
+        git-token: ${{ secrets.git-token }}
+        tag-msg: 'test'
+        tag-value: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
+        git-workdir: ${{ inputs.workingdir }}
+        push-option: ${{ inputs.push-option }}
